--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,32 @@ __pycache__/
 ./deployment/local_settings.py
 ./deployment/credentials.json
 ./deployment/.env
+./node_modules/
+/dist/
+/build/
+/.parcel-cache/
+*.log
+coverage/
+coverage.*
+htmlcov/
+.pytest_cache/
+.tox/
+.mypy_cache/        
+.ipynb_checkpoints/
+*.sqlite3
+*.db
+*.egg-info/
+*.egg
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+*.jks
+*.keystore
+*.cert
+*.ovpn
+*.kdbx
+*.enc
+*.gpg
+*.asc
