Fix .gitignore and remove node_modules from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ __pycache__/
 ./deployment/local_settings.py
 ./deployment/credentials.json
 ./deployment/.env
-./node_modules/
+node_modules/
 /dist/
 /build/
 /.parcel-cache/
